--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   </head>
   <body>
     <header>
-      <a href="./index.html">WebStudio</a>
       <nav>
+        <a href="./index.html">WebStudio</a>
         <ul>
           <li><a href="./index.html">Studio</a></li>
           <li><a href="./portfolio.html">Portfolio</a></li>
@@ -34,7 +34,7 @@
             <h3>Strategy</h3>
             <p>
               Our goal is to identify the business problem to walk away with the
-              perfect and creative solutions.
+              perfect and creative solution.
             </p>
           </li>
           <li>
